# nexoclom2

./: .coverage  .gitignore  =  CHANGELOG.md  INSTALL.csh  INSTALL.txt  README.md  nexoclom2_environment.yml  nexoclom2_environment_dev.yml  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
docs/source/: conf.py  index.rst
docs/source/apidocs/: modules.rst  nexoclom2.atomicdata.rst  nexoclom2.data.rst  nexoclom2.data_simulation.rst  nexoclom2.math.rst  nexoclom2.particle_tracking.rst  nexoclom2.rst  nexoclom2.utilities.rst
docs/source/nexoclom2/: NEXOCLOM_Requirements_Document.md  TestCases.md  api.rst  atomicdata.rst  coordinate_systems.rst  inputfiles.rst  lossrates.rst  planet_distance.rst  planet_geometry.rst
nexoclom2/: __init__.py
nexoclom2/atomicdata/: LossRate.py  __init__.py  atom.py  atomicmass.py  charge_exchange.py  compute_accel.py  compute_accel_xarray.py  eimp_emission_coef.py  eimp_ionization_coef.py  extract_chX_coefs.py  extract_eimp_coefs.py  gvalues.py  lossrate.py  reformat_gvalues.py
nexoclom2/data/: Mercury_subsolar_longitude.csv  PlanetaryConstants.csv  VoyagerTorus.pkl  __init__.py  naifids.csv  nexoclom_frames.tf  photorates.csv  photorates.ecsv  photorates.hdf5  valid_wavelengths.csv
nexoclom2/data/ChXRates/: Na.pkl  O.pkl  S.pkl
nexoclom2/data/EImpRates/: NA_1.pkl  S_1.pkl
nexoclom2/data/gvalues/: Al.csv  Al.ecsv  Al.txt  Ca.csv  Ca.ecsv  Ca.txt  CaII.csv  CaII.ecsv  CaII.txt  CaII_2.txt  H.csv  H.ecsv  He.csv  He.ecsv  K.csv  K.ecsv  K.txt  K_2.txt  Mg.csv  Mg.ecsv  MgII.csv  MgII.ecsv  Mn.csv  Mn.ecsv  Na.csv  Na.ecsv  Na.txt  O.csv  O.ecsv  O.txt  S.csv  S.ecsv  S.txt  figure_10b.txt  figure_11b.txt  figure_14b.txt  figure_15b.txt  figure_2b.txt  figure_3b.txt  figure_4b.txt  (+2 more)
nexoclom2/data/supplement_text_files_20220823/: figure_12a.txt  figure_12b.txt  figure_13a.txt  figure_13b.txt  figure_16a.txt  figure_16b.txt  figure_4a.txt  figure_5b.txt  figure_6b.txt  figure_7a.txt  figure_8b.txt  figure_9a.txt  figure_9b.txt
nexoclom2/data_simulation/: ModelImage.py  ModelResult.py
nexoclom2/initial_state/: ConstantSurfaceInteraction.py  FlatDist.py  Forces.py  Geometry.py  GeometryNoTime.py  GeometryTime.py  Input.py  InputClass.py  LossInformation.py  MaxwellianFluxDist.py  Options.py  RadialAngularDist.py  SpatialDist.py  SurfaceInteraction.py  UniformSpatialDist.py  __init__.py
nexoclom2/initial_state/AngularDists/: IsotropicAngDist.py  RadialAngDist.py
nexoclom2/initial_state/SpatialDists/: GoldenSpiralSpatDist.py  SurfSpotSpatDist.py  UniformSpatDist.py
nexoclom2/initial_state/SpeedDists/: FlatSpeedDist.py  MaxwellianFluxDist.py  SputteringFluxDist.py
nexoclom2/initial_state/SurfaceInteraction/: ConstantSurfInt.py
nexoclom2/initial_state/geometry/: Geometry.py  GeometryNoTime.py  GeometryTime.py
nexoclom2/math/: __init__.py  histogram.py  ks_test.py  mod_close.py  rotation_matrix.py
nexoclom2/particle_tracking/: ConstantIntegrator.py  Integrator.py  Integrator_old.py  Output.py  VariableIntegrator.py  __init__.py  compute_accel.py  final_state.py  packets.py  rk5_integrator.py  starting_point.py  starting_point_old.py  starting_point_saved.py  state_vectors.py  surface_interaction.py  transforms.txt
nexoclom2/solarsystem/: IoTorus.py  IoTorus_bak.py  MoonGeometryNoTime.py  MoonGeometryTime.py  PlanetGeometry.py  PlanetGeometryNoTime.py  PlanetGeometryTime.py  SSObject.py  SSPosition.py  TorusImage.py  VoyagerTorus.py  __init__.py  coordinate_conversion.py  find_modeltime.py  frames.py  load_kernels.py  planet_distance.py  planet_geometry.py
nexoclom2/utilities/: NexoclomConfig.py  __init__.py  check_value_range.py  database_operations.py  exceptions.py  make_acceptable.py  sci_notation.py
tests/: conftest.py  test_suite.numbers
tests/system_tests/: Mercury_tail.input  large_models.py  test_Mercury_tail.py
tests/test_data/: g-values.csv  gvalue_regression.pkl
tests/test_data/configfiles/: nexoclom2a  nexoclom2b  nexoclom2c  nexoclom2d  nexoclom2e
tests/test_data/horizons_ephem/: earth_horizons_days.csv  earth_horizons_year.csv  horizons_results.txt  io_horizons_days.csv  io_horizons_year.csv  jupiter_horizons_days.csv  jupiter_horizons_year.csv  mercury_horizons_days.csv  moon_horizons_days.csv  saturn_horizons_days.csv  saturn_horizons_year.csv
tests/test_data/inputfiles/: AngularDistInputs.txt  ForcesInputs.txt  GeometryInputs.txt  Io_Jupiter.input  Io_basic.input  LossInformationInputs.txt  Mercury_Ca_spot_notime.input  Mercury_Mercury_constant_notime.input  Mercury_Mercury_constant_time.input  Mercury_Mercury_nexoclom.input  Mercury_Mercury_variable_notime.input  Mercury_Mercury_variable_time.input  Mercury_Sun_constant_notime.input  Mercury_Sun_constant_time.input  Mercury_Sun_variable_notime.input  Mercury_Sun_variable_time.input  Mercury_basic.input  Moon_Moon_Time.input  OptionsInputs.txt  SpatialDistInputs.txt  SpeedDistInputs.txt  SurfaceInteractionInputs.txt  build_inputfiles.py  choose_inputfile.py  create_inputs.py  inputfile00.input  inputfile01.input  inputfile02.input
tests/thesisfigs/: fig5_2.py  fig5_3.py  fig5_7.py  fig5_8.py
tests/unit_tests/: test_Input.py  test_NexoclomConfig.py
tests/unit_tests/atomicdata/: compare_EimpExcitation.py  compare_EimpIonization.py  plot_eimp_ionization.py  simple_gValue_plot.py  test_ChargeEx.py  test_atomicmass.py  test_gValues.py  test_loss_information.py
tests/unit_tests/data_simulation/: test_Io_image.py  test_ModelImage.py  test_ModelImage_nexoclom.py
tests/unit_tests/initial_state/: test_ConstantSurfaceInteraction.py  test_Forces.py  test_Geometry.py  test_GeometryNoTime.py  test_GeometryTime.py  test_Input.py  test_InputClass.py  test_LossInformation.py  test_MaxwellianFluxDist.py  test_Options.py  test_RadialAngularDist.py  test_SurfaceInteraction.py  test_UniformSpatialDist.py
tests/unit_tests/math/: test_mod_close.py
tests/unit_tests/partcle_tracking/: io_test.pkl  savefile.h5  temp.py  test_ConstantIntegrator.py  test_Output.py  test_Output_init.py  test_Output_initial_state.py  test_Output_initial_state2.py  (+13 more)
(+2049 files in other folders)
