[tool.poetry]
name = "nexoclom2"
version = "0.1.1"
description = "Neutral EXosphere and CLoud Model v2"
authors = ["Matthew Burger <mburger@stsci.edu>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4"
numpy = "^1.26"
dask = "^2024"
scipy = "^1.11.1"
astropy = "^6"
pandas = {version="^2", extras=["performance", "computation", "parquet", "feather"]}
tinydb = "^4.8.0"
dash = "^2.11.0"
ipython = "^8.14.0"
matplotlib = "^3.7.1"
bokeh = "^3.2.0"
selenium-firefox = "^2.0.8"
scikit-learn = "^1.2.2"
astroquery = "^0.4.6"
periodictable = "^1.6.1"
plotly = "^5.15.0"
spiceypy = "^5.1.2"
logging = "^0.4.9.6"
pytest = "^8"
pytest-cov = "^5"
hypothesis = "^6"
myst-parser = "^2.0.0"
sphinx-autodoc2 = "^0.4.2"
sphinx-autoapi = "^3.0.0"
numpydoc = "^1.6.0"
pyarrow = "^14.0.1"
statsmodels = "^0"
h5py = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
