[project]
name = "nexoclom2"
version = "0.1.0"
description = "Neutral EXosphere and CLoud Model v2"
authors = [
    {name = "Matthew Burger",email = "mburger@stsci.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
license = "BSD 3-Clause"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "astropy (>=7.0.0,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipython (>=8.31.0)",
    "colorama (>=0.4.6)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "bokeh (>=3.6.2)",
    "selenium-firefox (>=2.0.8)",
    "cffi (>=1.17.1)",
    "scikit-learn (>=1.6.1)",
    "astroquery (>=0.4.7)",
    "periodictable (>=2.0.2)",
    "plotly (>=5.24.1)",
    "spiceypy (>=6.0.0)",
    "logging (>=0.4.9.6)",
    "statsmodels (>=0.14.4)",
    "h5py (>=3.12.1)",
    "rich (>=13.9.4)",
    "tinydb (>=4.8.2,<5.0.0)",
    "vedo (>=2024.5.2,<2025.0.0)",
    "cmake (>=4.1.0,<5.0.0)",
    "datetimetools (>=1.3.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf",
    "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
